# cppmake

./: .gitignore  README.md  install.bash  install_programs.bash  install_tools.bash  libs_build.bash
source/: .main.cpp.swp  CMakeLists.txt  main.cpp
